Use Path.of() instead of Paths.get()
Path.of() makes Paths.get() obsolete in Java 11

Release-Notes: skip
Change-Id: I0e4433d9e37e09a11029c3e5d0a7eec32a0d5eb3
Signed-off-by: Edwin Kempin <ekempin@google.com>